# stalebot

./: README.md  pylama.ini  pyproject.toml
.github/workflows/: python-ci.yml
stalebot/: hooks.py
